Sign In Twitter

--- a/index.html
+++ b/index.html
@@ -52,21 +52,23 @@
 	
 <body>
 	<div id="header">
-		<div class="login_box">
+		<!--<div class="login_box">-->
 			<div class="container">
 
 				<form class="form-signin" role="form">
-					<img src="img/twitter-logo-bird.gif" class="twitter_logo"/>
-					<h2 class="form-signin-heading">Please sign in</h2>
-					<input type="email" class="form-control" placeholder="Email address" required autofocus>
+					<div class="signin_header">
+						<img src="img/twitter-logo-bird.gif" class="twitter_logo"/>
+						<h2 class="form-signin-heading">Sign In With Twitter</h2>
+					</div>
+					<!--<input type="email" class="form-control" placeholder="Twitter UserName" required autofocus>
 					<input type="password" class="form-control" placeholder="Password" required>
 					<label class="checkbox">
 						<input type="checkbox" value="remember-me"> Remember me
-					</label>
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+					</label>-->
+					<br><br><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
 				</form>
 			</div>
-		</div>
+		<!--</div>-->
 		
 		<div id="footer">
 			<br>Designed and Developed By TwitBubbles
