--- a/main.html
+++ b/main.html
@@ -1,12 +1,11 @@
 <html>
 	<head>
-		<title>Esya'14</title>
+		<title>TwitBubble</title>
 		<meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
 		<link rel="stylesheet" href="css/supersized.css" type="text/css" media="screen" />
-		<link rel="stylesheet" type="text/css" href="css/style.css"/>
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css"/>
-		<link rel="stylesheet" type="text/css" href="css/signin.css"/>
+		<link rel="stylesheet" type="text/css" href="css/main.css"/>
 		
 		<script type="text/javascript" src="js/jquery.min.js"></script>
 		<script type="text/javascript" src="js/supersized.3.2.7.min.js"></script>
@@ -27,13 +26,13 @@
 														//{image : 'want9191-1A2DMh1383387500.jpg', url: '/'},
 														//{image : 'twitter.jpg', url: '/'},
 														//{image : 'twitter1.png', url: '/'},
-														{image : 'twitter_followers.jpg', url: '/'},
+														{image : 'img/twitter_followers.jpg', url: '/'},
 														//{image : 'socialmedia-companies.jpg', url: '/'},
-														{image : 'TwitterBird23.jpg', url: '/'},
+														{image : 'img/TwitterBird23.jpg', url: '/'},
 														//{image : 'Twitter-for-authors.png', url: '/'},
-														{image : '24142-1.png', url: '/'},
-														{image : 'feature_twitter10__01__630x4201.jpg', url: '/'},
-														{image : 'twitter (1).jpg', url: '/'},
+														{image : 'img/24142-1.png', url: '/'},
+														{image : 'img/feature_twitter10__01__630x4201.jpg', url: '/'},
+														{image : 'img/twitter (1).jpg', url: '/'},
 														//{image : 'parallax-4.jpg', url: '/'},
 														//{image : '246785_4105955240718_460680719_n.jpg', url: '/'},
 														//{image : '15.png', url: '/'},
@@ -47,27 +46,32 @@
 		    });
 		    
 		</script>
-		
 	</head>
 	
 <body>
-	<div id="header">
-		<div class="login_box">
-			<div class="container">
-
-				<form class="form-signin" role="form">
-					<img src="twitter-logo-bird.gif" class="twitter_logo"/>
-					<h2 class="form-signin-heading">Please sign in</h2>
-					<input type="email" class="form-control" placeholder="Email address" required autofocus>
-					<input type="password" class="form-control" placeholder="Password" required>
-					<label class="checkbox">
-						<input type="checkbox" value="remember-me"> Remember me
-					</label>
-					<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-				</form>
+	<div id="wrapper_main">
+			<div class="tweet_box">
+				<img src="img/twitterbird.jpg" class="tweet_userimage"/>
+				<div class="tweet_userinfo">
+					<div class="tweet_username">Soumya Sharma</div>
+					<div class="tweet_userhandle">@SoUmmYaah</div>
+				</div>
+				<div class="tweet_time">
+					12-04-2014 05:24
+				</div>
+				<div class="tweet_post">
+					Text & Talk is a double-blind peer-reviewed journal published by Mouton de Gruyter. It provides an international and interdisciplinary forum for publication of research in "language, discourse, and communication studies".<br>
+				</div>
+				<div class="tweet_buttons">
+					<img src="img/519627-127_ArrowLeft-128.png" class="tweet_replyimg"/>
+					<a href="#" class="tweet_reply"> Reply </a>
+					<img src="img/retweet.png" class="tweet_replyimg"/>
+					<a href="#" class="tweet_retweet"> Retweet </a>
+					<img src="img/star_fav.png" class="tweet_favimg"/>
+					<a href="#" class="tweet_favourite"> Favourite </a>
+				</div>
 			</div>
-		</div>
-		
+
 		<div id="footer">
 			<br>Designed and Developed By TwitBubbles
 		</div>		
